--- a/program/index.html
+++ b/program/index.html
@@ -786,8 +786,8 @@
                             <div class="text">
                                 <h3 class="item-title">İleri Analitik Teknolojiler ve Endüstri Uygulamaları</h3>
                                 <hr/>
-                                <h4>Gülcan Gökçeoğlu, İş Danışmanı, Koç Digital<br/>
-                                    Dr. Şebnem Güneş Söyler, Veri Bilimci, Koç Digital</h4>
+                                <h4>Gülcan Gökçeoğlu - İş Danışmanı, Koç Digital<br/>
+                                    Dr. Şebnem Güneş Söyler - Veri Bilimci, Koç Digital</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -795,7 +795,7 @@
                                 <img src="../assets/partners/doktar.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">GIS ve Remote Sensing</h3>
+                                <h3 class="item-title">Introduction to GIS & Remote Sensing Applications</h3>
                                 <hr/>
                                 <h4>Batuhan Kavlak - Analyst, Doktar Agricultural Solutions</h4>
                             </div>
@@ -816,11 +816,36 @@
                                 <img src="../assets/partners/yagmurguldogus.png" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Business Analytics</h3>
+                                <h3 class="item-title">Dünyanın En Büyük Mutfağı</h3>
                                 <hr/>
                                 <h4>Yağmur Güldoğuş - Business Intelligence Specialist, YemekSepeti</h4>
                             </div>
                         </div>
+
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://i.ibb.co/yddw4Nx/imageedit-1-5510289760.png" alt="">
+
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Order Prediction</h3>
+                                <hr/>
+                                <h4>Mehmet Aytimur - Full Stack Data Scientist, Trendify</h4>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHxpTmKtp5lSA/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=1obXmUOwNuIbRW-jQWUejeHUpneJQR2f1-GX2nRy5gM" alt="">
+
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Kaggle and Data Science</h3>
+                                <hr/>
+                                <h4>Emin Öztürk - Senior Data Scientist at Afiniti, Kaggle Master</h4>
+                            </div>
+                        </div>
+
                         <div class="program-item" style="display: none;">
                             <div class="time">
                                 <div>
