--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -191,7 +191,7 @@
                         <div class="col-lg-6">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.sisecam.com.tr/">
-                                    <img style="width: 70%;" src="/assets/partners/sisecam.jpg" alt="">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772547711798870056/sisecam.png?width=532&height=532" alt="">
                                 </a>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                         <div class="col-lg-6">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.fibabanka.com.tr/">
-                                    <img style="width: 70%;" src="/assets/partners/fibabanka.png" alt="">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772539095825776690/fibafinal.png?width=532&height=532" alt="">
                                 </a>
                             </div>
                         </div>
@@ -296,21 +296,29 @@
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="http://principai.com/">
-                                    <img style="width: 70%;" src="/assets/partners/principai.jpeg" alt="">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772558350473887744/principai1.png?width=532&height=532" alt="">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-4 mx-auto">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://trendify.co/">
-                                    <img style="width: 70%;" src="/assets/partners/trendify.png" alt="">
-                                </a>
-                            </div>
-                        </div>
+                        
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="http://hevi.ai/">
                                     <img style="width: 70%;" src="/assets/partners/hevisponsor.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.doktar.com/">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772540418206072862/doktar1.png?width=585&height=585" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://trendify.com.tr/">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772554308339367956/trendify11.png?width=585&height=585" alt="">
                                 </a>
                             </div>
                         </div>
