komtas logo duzeltildi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -175,7 +175,7 @@
                         <div class="col-lg-6">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.komtas.com/">
-                                    <img style="width: 70%;" src="/assets/partners/komtas.jpg" alt="">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/772773423679275009/komtas1.png?width=585&height=585" alt="">
                                 </a>
                             </div>
                         </div>
