trendify logo duzeltildi

--- a/program/index.html
+++ b/program/index.html
@@ -824,7 +824,7 @@
 
                         <div class="program-item">
                             <div class="image">
-                                <img src="https://i.ibb.co/yddw4Nx/imageedit-1-5510289760.png" alt="">
+                                <img src="https://media.discordapp.net/attachments/772498337978384424/772557101926055966/trendify2.png?width=585&height=585" alt="">
 
                             </div>
                             <div class="text">
