--- a/program/index.html
+++ b/program/index.html
@@ -179,14 +179,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/trendyol.jpg" alt="">
+                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQHhsl93lEFb6g/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=sB2zOOzcgRBFcWvrMFQuaekGIevdHi7fuOOwFzbTYGg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Growth Ekibi</h3>
+                                <h3 class="item-title">Growth Ekibi - "Trendyol'da Hayat"</h3>
                                 <hr/>
-                                <h4>Erdem Inan, CMO, Trendyol Group</h4>
-                                <h4>Nezir Alp, Head of Data Science, Trendyol Group</h4>
-                                
+                                <h4>Erdem Inan, CMO, Trendyol Group</h4>                                
                             </div>
                         </div>
                         <div class="program-item">
@@ -535,11 +533,18 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/trendyol.jpg" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C4E03AQFD9S6AJb9Dnw/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=g14gplf-Wu2dTABTvBE8zIrkEb519Z4vefstqiP3AMk" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C5603AQHvFRWevgCM3Q/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=AqGYODvonRALvUbZbpVyUfM7dBGPEj6L7Q06qLWKmhw" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C5103AQFbQo5Ts6ciqA/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=bMyzfBShjsxIq8vhdEx59lgtgPcKmio022dKvUw1EKw" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C4D03AQFcIqixkzkW7A/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=IajRdVPtZPp3G19DdLfhw6z3hVM8-l4ZZ6By4hKaLbA" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
-                                <h3><b>Trendyol Group</b> |  Teknoloji Ekibi</h3>
+                                <h3>Data ile Yaşamak</h3>
+                                <h4>Nezir Alp - Data Science</h4>
+                                <h4>Özgür İsmailler - Analytics&Digital Marketing</h4>
+                                <h4>Egecan Cesur - Dolap Analytics</h4>
+                                <h4>Servet Ünal - HR Business Partner</h4>
                             </div>
                         </div>
                         <div class="program-item">
