--- a/program/index.html
+++ b/program/index.html
@@ -182,9 +182,9 @@
                                 <img src="https://media-exp1.licdn.com/dms/image/C5603AQHhsl93lEFb6g/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=sB2zOOzcgRBFcWvrMFQuaekGIevdHi7fuOOwFzbTYGg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Growth Ekibi - "Trendyol'da Hayat"</h3>
+                                <h3 class="item-title">Trendyol'da Hayat</h3>
                                 <hr/>
-                                <h4>Erdem Inan, CMO, Trendyol Group</h4>                                
+                                <h4>Erdem İnan - CMO at Trendyol Group</h4>                                
                             </div>
                         </div>
                         <div class="program-item">
@@ -541,10 +541,10 @@
                             <div class="text">
                                 <h3 class="item-title"></h3>
                                 <h3>Data ile Yaşamak</h3>
-                                <h4>Nezir Alp - Data Science</h4>
-                                <h4>Özgür İsmailler - Analytics&Digital Marketing</h4>
-                                <h4>Egecan Cesur - Dolap Analytics</h4>
-                                <h4>Servet Ünal - HR Business Partner</h4>
+                                <h4>Nezir Alp - Head of Data Science at Trendyol Group</h4>
+                                <h4>Özgür İsmailler - Head of Data Analytics & Digital Marketing at Trendyol Group</h4>
+                                <h4>Egecan Cesur - Data Analyst at Trendyol Group</h4>
+                                <h4>Servet Ünal - HR Business Partner - Growth & Dolap at Trendyol Group</h4>
                             </div>
                         </div>
                         <div class="program-item">
