sabancı ieee eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -449,6 +449,13 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href=https://clubs.sabanciuniv.edu/tr/c/suieee>
+                                    <img style="width: 100%;" src="/assets/partners/kulupler/sabanciieee.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                         <!--
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
