--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -322,6 +322,13 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://temiznetwork.com/">
+                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/773119077743984660/temiz.png?width=585&height=585" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row align-items-center">
