--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                     <p>Zirve boyunca veri biliminin iş dünyasındaki güncel uygulamalarını tanırken, workshoplar sırasında uygulamalarını deneyimleyebileceksiniz.</p>
                     </div>
                     <div style="transform: translateY(10px)">
-                        <h3 style="font-size: 2.4vh">Etkinliğe Kalan Süre</h3>
-                        <h3 id="countdownTimer" style="font-size: 2.6vh;"></h3> <!--Kalan süre için 4 Kasım 00:00'ı baz aldım, değiştirmek isterseniz fonksiyon aşağıda. "Nov 4, 2020 00:00:00" şeklinde aratabilirsiniz.-->
+                        <h3 style="font-size: 2.4vh">Etkinlik Başladı!</h3>
+                        <!-- <h3 style="font-size: 2.4vh">Etkinliğe Kalan Süre</h3>
+                        <h3 id="countdownTimer" style="font-size: 2.6vh;"></h3>  -->
                         <h3 style="font-size: 2.4vh;">4 - 11 Kasım</h3>
                     </div> 
                     
