--- a/kayitozel/index.html
+++ b/kayitozel/index.html
@@ -52,7 +52,8 @@
         <title>
             Boğaziçi DataCamp '20
         </title>
-    
+        <meta name="robots" content="noindex">
+        <meta name="googlebot" content="noindex">
         
         <meta charset="UTF-8">
         <style>
@@ -223,10 +224,7 @@
             </div>
         </section>
         <section id="registrationForm">
-            <div class="container">
-                <h3>Kayıtlarımız kapanmıştır. Yoğun ilginizden dolayı teşekkür ederiz!</h3>
-            </div>
-            <!-- <div class="datacamp_widget"><p style="text-align: center;">Yükleniyor...</p></div> -->
+            <div class="datacamp_widget"><p style="text-align: center;">Yükleniyor...</p></div>
             <!-- <iframe 
                 id ="registrationFormFrame" 
                 class="hideform" 
