caglar icer eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -382,6 +382,7 @@
                                 <h4>Damla Dokuzoğlu - Co-Founder and CEO at AppNava</h4>
                                 <h4>Can Dörtkardeşler - Co-Founder and CEO at Udentify</h4>
                                 <h4>Samet Atdağ - Co-Founder and CTO at Prisync</h4>
+                                <h4>Çağlar İçer - Head of Predictive Business Unit at Insider</h4>
                             </div>
                         </div>
                     </div>
