--- a/program/index.html
+++ b/program/index.html
@@ -852,6 +852,61 @@
                             </div>
                         </div>
 
+
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media.discordapp.net/attachments/772498337978384424/772562416365207552/denizaksoy.png?width=532&height=532" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Veri Görselleştirme ve Algı Yönetimi</h3>
+                                <hr/>
+                                <h4>Deniz Aksoy - Senior Art Director, Turkcell</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQFxqx_wm_Pn4Q/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=TR2LcCoE69wjyyORl5J31BJ4pDKu6-o4RsDPVy75oS0" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Transformers Structures in DeepNLP</h3>
+                                <hr/>
+                                <h4>Omid Safarzadeh - Lead Data Scientist at The International Bank of Azerbaijan</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media.discordapp.net/attachments/772498337978384424/772838315220140062/microsoft.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Machine Learning</h3>
+                                <hr/>
+                                <h4>Damla Alkan - Customer Success Account Manager at Microsoft</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media.discordapp.net/attachments/772498337978384424/772843086295334912/b2metrio.png?width=532&height=532" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Automated Machine Learning Usecases For Business</h3>
+                                <hr/>
+                                <h4>Murat Hacıoğlu</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="https://media.discordapp.net/attachments/772498337978384424/772838315220140062/microsoft.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Azure Cognitive Services</h3>
+                                <hr/>
+                                <h4>Damla Alkan - Customer Success Account Manager at Microsoft</h4>
+                            </div>
+                        </div>
+
+
+
+
                         <div class="program-item" style="display: none;">
                             <div class="time">
                                 <div>
