arcelık konusma eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -266,12 +266,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFllUXpwOijMw/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=siI6-sECXlDHtB_mXFG8yuzLIKVPkvTryATqz3ES8LQ" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">E-Ticaret'te İş Analitiği Uygulamaları</h3>
+                                <h3 class="item-title">Büyük Veri ve Dijital Dönüşüm</h3>
                                 <hr/>
-                                <h4>E-Ticaret Slotu</h4>
+                                <h4>Mehmet Targün - Dijital Dönüşüm ve Analitik Direktörü, Yıldız Holding</h4>
                             </div>
                         </div>
                         <div class="program-item">
