--- a/program/index.html
+++ b/program/index.html
@@ -402,12 +402,14 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="https://media-exp1.licdn.com/dms/image/C5103AQEceEbn10RcGQ/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=nUXA_VkR7rar_NZOF970b4XwCbDNiPLtnAc4Uxh-W2k" alt="">
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGg_5uqUAorBw/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=RKWgWAQw3qZ8I_PCLd68uSrjXJHm82vQBBE-e2DuN8k" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Konuşma</h3>
                                 <hr/>
-                                <h4>Platin Sponsor Slotu</h4>
+                                <h4>Pınar Köse Kulacz - Veri&Yapay Zeka Grup Yöneticisi, Arçelik</h4>
+                                <h4>Bahar Karaoğlu – Yapay Zeka& Veri Analitiği Yöneticisi, Arçelik</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -492,7 +494,7 @@
                                 <img style="width: 70%;" src="../assets/partners/TanselKilicOdeonSeniorYazilimDirektoru.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel</h3>
+                                <h3 class="item-title">Panel - Nedenleri ve Niyesiyle Yeni Nesil Veri Teknolojileri</h3>
                                 <hr/>
                                 <h4>Koray Kocabaş (Moderatör, Demirören Teknoloji, Director of Big Data Analytics)</h4>
                                 <h4>Mehmet Ali Erdin (Emlakjet.com CTO)</h4>
