--- a/program/index.html
+++ b/program/index.html
@@ -287,12 +287,18 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C5603AQG79qY95vk-ZQ/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=bJRLWNOLqYro8VclTkYE5_-FIP6XMQAzTN-fk5dby8o" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C5603AQEbTbUD-T8nVw/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=IThW02cPZybTmORk6d0jjhJWngUcXEfl04rKKozdvcQ" alt="">
+                                <img style="width: 70%;" src="https://media-exp1.licdn.com/dms/image/C4D03AQErIGQpWrtIsA/profile-displayphoto-shrink_800_800/0?e=1609977600&v=beta&t=CGZ-FHYg3rqMnOd3_A4GeYnKvyrAdzbs94CNEaD9OEU" alt="">
+                                
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Veri Görselleştirmenin Etik Boyutu</h3>
+                                <h3 class="item-title">Panel - It’s all about Data & Analytics</h3>
                                 <hr/>
-                                <h4>Uygulama Slotu</h4>
+                                <h4>Özgür Kaynar - General Manager, Analythinx</h4>
+                                <h4>Kadir Evciler - Co-Founder / Analytic Zone Leader, Digitallency</h4>
+                                <h4>Mesut Demirbilek - Founder & General Manager, My Security Analytics</h4>
+                                <h4>Hakan Pekiner - General Manager, Quants</h4>
                             </div>
                         </div>
                         <div class="program-item">
