--- a/program/index.html
+++ b/program/index.html
@@ -533,7 +533,7 @@
                                 <hr/>
                                 <h4>Nezir Alp - Head of Data Science at Trendyol Group</h4>
                                 <h4>Özgür İsmailler - Head of Data Analytics & Digital Marketing at Trendyol Group</h4>
-                                <h4>Egecan Cesur - Data Analyst at Trendyol Group</h4>
+                                <h4>Emir Akkoyun - Data Analyst at Trendyol Group</h4>
                                 <h4>Servet Ünal - HR Business Partner - Growth & Dolap at Trendyol Group</h4>
                             </div>
                         </div>
