arcelik logo guncelleme

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -206,7 +206,7 @@
                         <div class="col-lg-6 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.arcelik.com.tr/">
-                                    <img style="width: 70%;" src="https://media.discordapp.net/attachments/772498337978384424/774009032943861800/arcelikfinal1.png?width=585&height=585" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/arcelik.png" alt="">
                                 </a>
                             </div>
                         </div>
