datathon katıtlarıyla ilgili

--- a/program/index.html
+++ b/program/index.html
@@ -984,7 +984,7 @@
                 <div class="programs-container content">
                     <div class="program-container">
                      <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
-                        <h4 class="program-day">Aralık ayında yapılacak olan Datathon başvuruları Zirve sırasında açılacaktır.</h4>
+                        <h4 class="program-day">Aralık ayında yapılacak olan Datathon başvuruları Zirve sonrasında açılacaktır.</h4>
                     </div>
                 </div>
             </div><br/><br/>
