bir daha pushlamak icin

--- a/datathon/index.html
+++ b/datathon/index.html
@@ -174,7 +174,7 @@
                             >
                             <span>Toplu katılım hakkında bilgi için lütfen iletişim kurunuz</span> </a
                         >
-                    </p> -->
+                    </p> yuklesin asd -->
                 </div>
             </div>
         </section>
