--- a/datathon/index.html
+++ b/datathon/index.html
@@ -290,7 +290,7 @@
                         </div>
                         <div class="text">
                             <strong>Faruk Tüfekçi</strong> <br>
-                            <em>Trendyol Group şirketinde Data Scientist</em> <br>
+                            <em>Data Scientist at Trendyol Group</em> <br>
                         </div>
                     </div>
                 </div>
@@ -472,7 +472,7 @@
                         </div>
                         <div id="collapse11" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample" style="">
                             <div class="card-body">
-                                İlk üç takıma sırasıyla 1500₺,1000₺ ve 500₺ para ödülü verilecektir.
+                                İlk üç takıma sırasıyla 1500&#8378;,1000&#8378; ve 500&#8378; para ödülü verilecektir.
                             </div>
                         </div>
                     </div>
@@ -539,10 +539,6 @@
                     </div> -->
                 </div>
                 <br/>
-                <p class="lead" style = "text-align: center;">
-                    <a class="btn btn-primary text-wrap" onclick="Tawk_API.maximize()" role="button">
-                        <span>Toplu katılım hakkında bilgi için lütfen iletişim kurunuz</span> </a>
-                </p>
             </div>
         </section>
 
