--- a/datathon/index.html
+++ b/datathon/index.html
@@ -472,7 +472,7 @@
                         </div>
                         <div id="collapse11" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample" style="">
                             <div class="card-body">
-                                İlk üç takıma sırasıyla 1500&#8378;,1000&#8378; ve 500&#8378; para ödülü verilecektir.
+                                İlk üç takıma sırasıyla 1500 TL ,1000 TL ve 500 TL para ödülecektir.
                             </div>
                         </div>
                     </div>
