--- a/datathon/index.html
+++ b/datathon/index.html
@@ -281,7 +281,7 @@
                         </div>
                         <div class="text">
                             <strong>Çağatay Karabulut</strong> <br>
-                            <em>Data Science Intern at Trendyol Group</em> <br>
+                            <em>Data Scientist at Trendyol Group</em> <br>
                         </div>
                     </div>
                     <div class="team-member">
