--- a/datathon/index.html
+++ b/datathon/index.html
@@ -359,7 +359,7 @@
                         </div>
                         <div id="collapse3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample" style="">
                             <div class="card-body">
-                                Veri bilimi’ne ilgi duyan ve yetkinliklerini sergilemek isteyen 3.Sınıf ve 4.Sınıf ve yeni mezun olmuş olan tüm öğrenciler katılabilir.
+                                Veri bilimi’ne ilgi duyan ve yetkinliklerini sergilemek isteyen 3.Sınıf ve 4.Sınıf, Yüksek Lisans, Doktora ve yeni mezun olmuş olan tüm öğrenciler katılabilir.
                             </div>
                         </div>
                     </div>
