--- a/datathon/index.html
+++ b/datathon/index.html
@@ -222,7 +222,7 @@
                 </div>
             </div><br/><br/>
             <div class="container">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSenwcGd5ERgNQF5TJrfuD_Mot5fTsknHc4KcjbBiZvl7wvtBg/viewform?embedded=true" width="640" height="2100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSenwcGd5ERgNQF5TJrfuD_Mot5fTsknHc4KcjbBiZvl7wvtBg/viewform?embedded=true" width="100%" height="2100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <!-- <div class="datacamp_widget"><p style="text-align: center;">Yükleniyor...</p></div> -->
             <!-- <iframe 
