--- a/program/index.html
+++ b/program/index.html
@@ -113,6 +113,8 @@
                     <a href="/sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
             
                     <a href="/kayit" data-type="navItem" class="animated fast fadeOut">Kayıt Ol</a>
+
+                    <a href="/2020" data-type="navItem" class="animated fast fadeOut">DataCamp '20</a>
             
                     <a href="/2019" data-type="navItem" class="animated fast fadeOut">DataCamp '19</a>
 
