bize ulaşın ekip güncelleme

--- a/index.html
+++ b/index.html
@@ -243,45 +243,45 @@
             <div class="team-container clearfix text-break">
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/enes.jpeg" alt="Enes Döke">
+                        <img src="assets/team/burkay.jpg" alt="Ahmet Burkay Kınık">
                     </div>
                     <div class="text">
-                        <strong>Enes Döke</strong> <br>
+                        <strong>Ahmet Burkay Kınık</strong> <br>
                         <em>DataCamp Proje Direktörü</em> <br>
-                        <a class="mailFont" href="mailto:enes.doke@compec.org" target="_top">enes.doke@compec.org</a> <br>
+                        <a class="mailFont" href="mailto:burkay.kinik@compec.org" target="_top">burkay.kinik@compec.org</a> <br>
                    <!-- Ekip iletişim bilgileri    <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/irem.jpg" alt="İrem Urhan">
+                        <img src="assets/team/fatmanur.jfif" alt="Fatmanur Yaman">
                     </div>
                     <div class="text">
-                        <strong>İrem Urhan</strong> <br>
-                        <em>DataCamp Proje Koordinatörü</em> <br>
-                        <a class="mailFont" href="mailto:irem.urhan@leader.compec.org" target="_top">irem.urhan@leader.compec.org</a> <br>
+                        <strong>Fatmanur Yaman</strong> <br>
+                        <em>DataCamp Proje Lideri</em> <br>
+                        <a class="mailFont" href="mailto:fatmanur.yaman@leader.compec.org" target="_top">fatmanur.yaman@leader.compec.org</a> <br>
                      <!--   <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/berkay.jpg" alt="Berkay İşler">
+                        <img src="assets/team/semih.png" alt="Recep Semih Kanber">
                     </div>
                     <div class="text">
-                        <strong>Berkay İşler</strong> <br>
-                        <em>DataCamp Proje Koordinatörü</em> <br>
-                        <a class="mailFont" href="mailto:berkay.isler@leader.compec.org" target="_top">berkay.isler@leader.compec.org</a> <br>
+                        <strong>Recep Semih Kanber</strong> <br>
+                        <em>DataCamp Proje Lideri</em> <br>
+                        <a class="mailFont" href="mailto:recepsemih.kanber@leader.compec.org" target="_top">recepsemih.kanber@leader.compec.org</a> <br>
                     <!--     <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/burkay.jpg" alt="Ahmet Burkay Kınık">
+                        <img src="assets/team/ahmetcelal.png" alt="Ahmet Celal Gündoğdu">
                     </div>
                     <div class="text">
-                        <strong>Ahmet Burkay Kınık</strong> <br>
-                        <em>DataCamp Proje Koordinatörü</em> <br>
-                        <a class="mailFont" href="mailto:burkay.kinik@leader.compec.org" target="_top">burkay.kinik@leader.compec.org</a> <br>
+                        <strong>Ahmet Celal Gündoğdu</strong> <br>
+                        <em>DataCamp Proje Lideri</em> <br>
+                        <a class="mailFont" href="mailto:ahmetcelal.gundogdu@leader.compec.org" target="_top">ahmetcelal.gundogdu@leader.compec.org</a> <br>
                      <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
                     </div>
                 </div>
