program açılış deneme

--- a/program/index.html
+++ b/program/index.html
@@ -140,7 +140,7 @@
                 <div class="programs-container content">
                     <!--Yeni bir gün oluşturmak için program-container kopyası yapabilirsiniz. Yani bu comment'in sonundan itibaren kopyalamaya başlayın. Buradaki ilk program-container'daki program-item'larda konu ve kişiler arasında çizgi elementi <hr/> bulunuyor. Ayırmak için bundan koyabilirsiniz.-->
                     <div class="program-container">
-                        <h3 class="program-day">7 Kasım - Cumartesi</h3>
+                        <h3 class="program-day">4 Aralık - Cumartesi</h3>
                         <!--Program içindeki her bir satır bir program-item'a denk geliyor. Buradan itibaren kopyalayınız-->
                         <div class="program-item">
                             <div class="time">
@@ -154,19 +154,21 @@
                                     25
                                 </div>
                             </div>
-                            
+                            <!--
                             <div class="image">
                                 <img src="../assets/partners/elifbesler.jpeg" alt="">
                                 <img src="../assets/partners/enesdoke.jpeg" alt="">
                                 <img src="../assets/partners/tunatugcu.jpeg" alt="">
                             </div>
-                            
+                            -->
                             <div class="text">
                                 <h3 class="item-title">Açılış Konuşmaları</h3>
                                 <hr/>
+                                <!--
                                 <h4>Elif Besler, 2020-2021 Compec Yönetim Kurulu Başkanı</h4>
                                 <h4>Enes Döke, DataCamp 2020 Proje Direktörü</h4>
                                 <h4>Tuna Tuğcu, Profesör, Boğaziçi Üniversitesi Bilgisayar Mühendisliği Bölüm Başkanı</h4>
+                                -->
                             </div>
                         </div>
                         <!--Buraya kadar.-->
