program başığı güncelleme

--- a/program/index.html
+++ b/program/index.html
@@ -127,10 +127,10 @@
         
         <section id="program" style="padding-top: 100px; flex: 1;">
             <div class="container container-wide" style="text-align: center;">
-                <h1>Boğaziçi DataCamp '20 Programı</h1>
+                <h1>Boğaziçi DataCamp '21 Programı</h1>
                 <div class="programs-container">
                     <div class="program-container" >
-                        <h3>Boğaziçi DataCamp '20; Zirve, Workshop'lar ve Datathon olmak üzere 3 kısımdan oluşmaktadır.</h3>
+                        <h3>Boğaziçi DataCamp '21; Zirve, Workshoplar ve Webinarlar olmak üzere 3 kısımdan oluşmaktadır.</h3>
                     </div>
                 </div>
             </div>
