--- a/index.html
+++ b/index.html
@@ -147,19 +147,20 @@
             <div class="why-container">
                 <h2>Boğaziçi DataCamp Nedir?</h2>
                 <p>
-                    Boğaziçi Datacamp veri bilimi ve onun iş dünyasındaki uygulamalarının konuşmacı ve katılımcıların workshoplarla uygulayarak öğrenmesi üzerine olan bir zirvedir.  </p>
-                <h3>Yer - Tarih</h3>
+                    Boğaziçi Datacamp veri bilimi ve onun iş dünyasındaki uygulamalarının konuşmacı ve katılımcıların workshoplarla uygulayarak öğrenmesi üzerine olan bir zirvedir.  </p><br>
+                <h2>Yer - Tarih</h2>
                 <p>
-                    Online<br>
-                    1 - 3 Aralık Workshop<br>
-                    4 - 5 Aralık Zirve
+
+                    1 - 3 Aralık Workshop : Online<br>
+                    4 Aralık Zirve : Online<br>
+                    5 Aralık Zirve : Boğaziçi Üniversitesi
                  
-                </p>
+                </p><br>
             
 
             </div>
             <div class="why-container">
-                <h2>Kimler için?</h2>
+                <h2>Kimler İçin?</h2>
                 <p>Boğaziçi DataCamp;</p>
                 <ul class="why-list">
                     <li>
